feat: validations when creating courses feat: filter courses by text